Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNrMbKOQKwbYO0vokKhiuWD",
+      "authorship_tag": "ABX9TyM824eJFPSBgHfSIrJqAeAO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,10 @@
       "source": [
         "#スターリングの公式\n",
         "$$\n",
-        "n! ∼ n^ne^{-n}\\sqrt{2\\pi n} \\quad (n\\rightarrow∞)\n",
+        "n! = n^ne^{-n}\\sqrt{2\\pi n}(1 + o(1)) \\quad (n\\rightarrow∞)\n",
+        "$$\n",
+        "$$\n",
+        "⇔\\ln n! = n\\ln n - n + \\frac{1}{2}\\ln n + \\ln\\sqrt{2\\pi} + o(1) \\quad (n\\rightarrow∞)\n",
         "$$\n",
         "\n",
         "#KL 情報量\n",
@@ -51,7 +54,8 @@
         "$$\n",
         "となる。つまり、KL 情報量 $D(q||p)$ は $p$ に従う乱数列が $q$ に従うように見える確率の対数が減衰する速さである。\n",
         "###証明\n",
-        "一般の場合の証明は大変なので $p(x)$, $q(x)$ ともに有限台の離散確率分布とする。すなわち、有限集合 $\\{1,…,r\\}$ 上の非負値関数で\n",
+        "一般の場合の証明は大変 (というか僕も知らない) なので $p(x)$, $q(x)$ ともに有限台の離散確率分布とする。  \n",
+        "すなわち、有限集合 $\\{1,…,r\\}$ 上の非負値関数で\n",
         "$$\n",
         "\\sum_{i=1}^{r}p_i = 1,\n",
         "$$\n",
@@ -59,8 +63,8 @@
         "\\sum_{i=1}^{r}q_i = 1 \n",
         "$$\n",
         "を満たすものを考える。  \n",
-        "$(X_n)_{n=1}^∞$ を $p$ に従う独立同分布な確率変数列とする。$n$ を正整数とする。\n",
-        "と置く。$\\sum_{i = 1}^rk_i=n$ を満たす非負整数列 $(k_i)_{i=1}^r$ を与える。\n",
+        "$(X_n)_{n=1}^∞$ を $p$ に従う独立同分布な確率変数列とする。  \n",
+        "$n$ を正整数とする。$\\sum_{i = 1}^rk_i=n$ を満たす非負整数列 $(k_i)_{i=1}^r$ を与える。\n",
         "$$\n",
         "k_i = \\#\\{m ≤ n | X_m = i\\} \\quad (i = 1,…,r)\n",
         "$$ \n",
@@ -68,8 +72,40 @@
         "$$\n",
         "\\frac{n!}{k_1!…k_r!}p_1^{k_1}…p_r^{k_r}\n",
         "$$\n",
-        "となる。ここで、$k_i = nq_i + O(\\ln(n))$ であると仮定する。すなわち、\n",
-        "上記の確率は"
+        "となる。  \n",
+        "ここで、$k_i = nq_i(1 + O(\\frac{\\ln{n}}{n})) = nq_i + O(\\ln n)$ であると仮定する。  \n",
+        "このとき特に $\\frac{k_i}{n}→q_i\\quad(n→∞)$ となる (つまり $(X_n)_{n=1}^∞$ がまるで $q$ に従うように見える)。  \n",
+        "スターリングの公式より\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "  \\ln n! &= n\\ln n - n + O(\\ln n)\\\\\n",
+        "  \\ln k_i! &= k_i\\ln k_i - k_i + O(\\ln k_i)\\\\\n",
+        "  &=k_i\\ln k_i - k_i + O(\\ln n)\\\\\n",
+        "  \\ln p_i^{k_i} &= k_i\\ln p_i\n",
+        "\\end{align}\n",
+        "$$\n",
+        "また、仮定より\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "  \\ln \\frac{k_i}{n} &= \\ln q_i + \\ln \\left(1 + O\\left(\\frac{\\ln{n}}{n}\\right)\\right)\\\\\n",
+        "  &= \\ln q_i + O\\left(\\frac{\\ln{n}}{n}\\right)\n",
+        "\\end{align}\n",
+        "$$\n",
+        "ゆえに、仮定と合わせて\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "  \\ln\\frac{n!}{k_1!…k_r!}p_1^{k_1}…p_r^{k_r} &= n\\ln n - k_1\\ln k_1 - … - k_r\\ln k_r + k_1\\ln p_1 + … + k_r\\ln p_r + O(\\ln n)\\\\\n",
+        "  &= - k_1\\left(\\ln\\frac{k_1}{n} - \\ln p_1\\right) - … - k_r\\left(\\ln\\frac{k_r}{n} - \\ln p_r\\right) + O(\\ln n)\\\\\n",
+        "  &= - k_1\\left(\\ln q_1 - \\ln p_1\\right) - … - k_r\\left(\\ln q_r - \\ln p_r\\right) + O(\\ln n)\\\\\n",
+        "  &= - nq_1\\ln\\frac{q_1}{p_1} - … - nq_r\\ln\\frac{q_r}{p_r} + O(\\ln n)\\\\\n",
+        "  &=-nD(q||p) + o(n)\n",
+        "\\end{align}\n",
+        "$$\n",
+        "従って、\"$X_1,…,X_n$ が $q$ に従うように見える確率\" は\n",
+        "$$\n",
+        "\\exp(-nD(q||p) + o(n))\n",
+        "$$\n",
+        "となる(証明終)。"
       ],
       "metadata": {
         "id": "9_hd8FYCG851"
