Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOu86Lb/6xpaFGMoyGsVdKl",
+      "authorship_tag": "ABX9TyOSN9pFdvGT8ltVUf5kV/9E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#スターリングの公式\n",
+        "# 注意\n",
+        "このノートは現状  \n",
+        "https://nbviewer.org/github/genkuroki/Statistics/blob/master/KL%20information%20and%20descriptive%20statistics.ipynb  \n",
+        "と  \n",
+        "https://genkuroki.github.io/documents/20160616KullbackLeibler.pdf  \n",
+        "の丸パクリ (というか超絶劣化版) である。  \n",
+        "最終的には AIC について基本的なことをまとめて具体的な例で実験したい。  \n",
+        "public にしたくなかったけど colab から push するためにしょうがなかった。  \n",
+        "private なリポジトリだと共有するのめんどいし。  \n",
+        "発表終わったら速やかに private にします。"
+      ],
+      "metadata": {
+        "id": "GKJGaV8nUvHh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# スターリングの公式\n",
         "$$\n",
         "n! = n^ne^{-n}\\sqrt{2\\pi n}(1 + o(1)) \\quad (n\\rightarrow∞)\n",
         "$$\n",
@@ -39,21 +57,21 @@
         "⇔\\ln n! = n\\ln n - n + \\frac{1}{2}\\ln n + \\ln\\sqrt{2\\pi} + o(1) \\quad (n\\rightarrow∞)\n",
         "$$\n",
         "\n",
-        "#KL 情報量\n",
+        "# KL 情報量\n",
         "確率分布 $p(x)$ の確率分布 $q(x)$ に対する KL 情報量 $D(q||p)$ を\n",
         "$$\n",
         "D(q||p) = ∫q(x)\\ln{\\frac{q(x)}{p(x)}}\\mathrm{d}x\n",
         "$$\n",
         "で定義する。\n",
         "\n",
-        "#Sanov の定理による KL 情報量の意味付け\n",
-        "###Sanov の定理\n",
+        "# Sanov の定理による KL 情報量の意味付け\n",
+        "### Sanov の定理\n",
         "$p(x)$, $q(x)$を確率分布とし、$X_1,X_2…$ が $p(x)$ に従う独立同分布な確率変数列であるとする。このとき \"$X_1,…,X_n$ が $q(x)$ に従うように見える確率\" は\n",
         "$$\n",
         "\\exp(-nD(q||p) + o(n))\n",
         "$$\n",
         "となる。つまり、KL 情報量 $D(q||p)$ は $p$ に従う乱数列が $q$ に従うように見える確率の対数が減衰する速さである。\n",
-        "###証明\n",
+        "### 証明\n",
         "一般の場合の証明は大変 (というか僕も知らない) なので $p(x)$, $q(x)$ ともに有限台の離散確率分布とする。  \n",
         "すなわち、有限集合 $\\{1,…,r\\}$ 上の非負値関数で\n",
         "$$\n",
