Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSN9pFdvGT8ltVUf5kV/9E",
+      "authorship_tag": "ABX9TyNUFIUp35rULQGPzsh09BBw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "最終的には AIC について基本的なことをまとめて具体的な例で実験したい。  \n",
         "public にしたくなかったけど colab から push するためにしょうがなかった。  \n",
         "private なリポジトリだと共有するのめんどいし。  \n",
-        "発表終わったら速やかに private にします。"
+        "恥ずかしいので発表終わったら速やかに private にします。"
       ],
       "metadata": {
         "id": "GKJGaV8nUvHh"
