--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOId1edd3KwrUIGiZp6HtIt",
+      "authorship_tag": "ABX9TyOZbwNes8YEHwlgpyT7YY+O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,11 +52,16 @@
       "source": [
         "# スターリングの公式\n",
         "$$\n",
-        "n! = n^ne^{-n}\\sqrt{2\\pi n}(1 + o(1)) \\quad (n\\rightarrow∞)\n",
+        "\\begin{align}\n",
+        "n! &= n^ne^{-n}\\sqrt{2\\pi n}(1 + o(1)) \\quad (n\\rightarrow∞)\\\\\n",
+        "⇔\\ln n! &= n\\ln n - n + \\frac{1}{2}\\ln n + \\ln\\sqrt{2\\pi} + o(1) \\quad (n\\rightarrow∞)\n",
+        "\\end{align}\n",
         "$$\n",
+        "特に\n",
         "$$\n",
-        "⇔\\ln n! = n\\ln n - n + \\frac{1}{2}\\ln n + \\ln\\sqrt{2\\pi} + o(1) \\quad (n\\rightarrow∞)\n",
+        "\\ln n! = n\\ln n - n + O(\\ln n)\n",
         "$$\n",
+        "となる。\n",
         "# KL 情報量\n",
         "確率分布 $p(x)$ の確率分布 $q(x)$ に対する KL 情報量 $D(q||p)$ を\n",
         "$$\n",
@@ -74,17 +79,17 @@
         "一般の場合の証明は大変 (というか僕も知らない) なので $p(x)$, $q(x)$ ともに有限台の離散確率分布とする。  \n",
         "すなわち、有限集合 $\\{1,…,r\\}$ 上の非負値関数で\n",
         "$$\n",
-        "\\sum_{i=1}^{r}p_i = 1,\n",
-        "$$\n",
-        "$$\n",
-        "\\sum_{i=1}^{r}q_i = 1 \n",
+        "\\begin{align}\n",
+        "\\sum_{i=1}^{r}p_i &= 1,\\\\\n",
+        "\\sum_{i=1}^{r}q_i &= 1 \n",
+        "\\end{align}\n",
         "$$\n",
         "を満たすものを考える。  \n",
         "また簡単のため、任意の $i$ について $p_i,q_i>0$ とする。  \n",
         "$(X_n)_{n=1}^∞$ を $p$ に従う独立同分布な確率変数列とする。  \n",
         "$n$ を正整数とする。$\\sum_{i = 1}^rk_i=n$ を満たす非負整数列 $(k_i)_{i=1}^r$ を与える。\n",
         "$$\n",
-        "k_i = \\#\\{m ≤ n | X_m = i\\} \\quad (i = 1,…,r)\n",
+        "k_i=\\#\\{m≤n|X_m=i\\} \\quad (i = 1,…,r)\n",
         "$$ \n",
         "となる (すなわち値 $i$ がちょうど $k_i$ 回観測される) 確率は\n",
         "$$\n",
