Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZbwNes8YEHwlgpyT7YY+O",
+      "authorship_tag": "ABX9TyNub0D9d36TXEd3Hz5JRQBn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,16 @@
         "$$\n",
         "\\ln n! = n\\ln n - n + O(\\ln n)\n",
         "$$\n",
-        "となる。\n",
+        "となる。  \n",
+        "最後の評価は荒いが、今回はこれで十分。  \n",
+        "また、\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "\\sum_{x = 1}^n\\ln x &= \\ln n!\\\\\n",
+        "\\int_1^n\\ln x\\mathrm{d}x &= n\\ln n - n + 1\n",
+        "\\end{align}\n",
+        "$$\n",
+        "より、最後の評価は対数関数の積分を和で近似した際の誤差のオーダーが $\\ln n$ であることを示している。\n",
         "# KL 情報量\n",
         "確率分布 $p(x)$ の確率分布 $q(x)$ に対する KL 情報量 $D(q||p)$ を\n",
         "$$\n",
@@ -130,7 +139,7 @@
         "$$\n",
         "となる (証明終)。\n",
         "### 注意\n",
-        "通常 $0\\ln0=0$ と約束するので、$q_i=0$ となる $i$ があっても上の評価は問題なく成立する。  \n",
+        "通常 $0\\ln 0=0$ と約束するので、$q_i=0$ となる $i$ があっても上の評価は問題なく成立する。  \n",
         "しかし $q_i>0$ かつ $p_i=0$ なる $i$ があると $D(q||p) = ∞$ となり、上の評価は破綻する。  \n",
         "これは、$i$ の目が絶対出ないサイコロを $i$ の目が出るサイコロでたまたまシミュレートすることはできても、$i$ の目が出るサイコロを $i$ の目が出ないサイコロでシミュレートすることはできないことに対応する...のだと思う。\n",
         "# KL 情報量の諸性質\n",
