Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNub0D9d36TXEd3Hz5JRQBn",
+      "authorship_tag": "ABX9TyPOeifCw6TO1+4Q1P34Cfku",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,20 +72,43 @@
         "$$\n",
         "より、最後の評価は対数関数の積分を和で近似した際の誤差のオーダーが $\\ln n$ であることを示している。\n",
         "# KL 情報量\n",
-        "確率分布 $p(x)$ の確率分布 $q(x)$ に対する KL 情報量 $D(q||p)$ を\n",
+        "確率分布 $p$ の確率分布 $q$ に対する KL 情報量 $D(q||p)$ を\n",
         "$$\n",
         "D(q||p) = ∫q(x)\\ln{\\frac{q(x)}{p(x)}}\\mathrm{d}x\n",
         "$$\n",
         "で定義する。\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "D(q||p) &= \\left(-∫q(x)\\ln p(x)\\mathrm{d}x\\right) -\\left(-∫q(x)\\ln q(x)\\mathrm{d}x\\right)\\\\\n",
+        "&= G(q||p) - S(q)\n",
+        "\\end{align}\n",
+        "$$\n",
+        "と書ける。ここに、\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "G(q||p) &:= -∫q(x)\\ln p(x)\\mathrm{d}x\\\\\n",
+        "S(q) &:= -∫q(x)\\ln q(x)\\mathrm{d}x \n",
+        "\\end{align}\n",
+        "$$\n",
+        "である。$G(q||p)$ を $p$ の $q$ に対する交差エントロピー、もしくは汎化誤差と呼び、$S(q)$ をシャノンエントロピーと呼ぶ[<sup>1</sup>](#id_01)。  \n",
+        "\n",
+        "シャノンエントロピー $S(q)$ は \" $q$ に従って発生する記号列を符号化した際の平均符号長の下限\" 、交差エントロピー $G(q||p)$ は \" $q$ に従って発生する記号列を $p$ に従うと考えて記号化した時の平均符号長\" と解釈される。  \n",
+        "よって KL 情報量 $D(q||p)$ は \"実際には $q$ に従って発生する記号列を $p$ に従うとして符号化した際の平均符号長のロス\" と解釈できる (ただし $p$, $q$ が離散的な場合に限る)。  \n",
+        "また、$-\\ln p(x)$ が \" $p$ に従う確率変数 $X$ について、$X = x$ と知らされたときに受け取る情報量\" であったことを思い出そう。改めて\n",
+        "$$\n",
+        "D(q||p) = -∫q(x)[\\{-\\ln q(x)\\} - \\{-\\ln p(x)\\}]\\mathrm{d}x\n",
+        "$$\n",
+        "と書き、$p$ を事前分布、$q$ を事後分布と見なせば、$D(q||p)$ は \"事前分布 $p$ を 事後分布 $q$ に更新することで、$X$ の値を知って受け取る情報量が平均的にどれだけ減ったか\" を表すとも考えられる。  \n",
+        "これらの解釈の他に、より\n",
         "# Sanov の定理による KL 情報量の意味付け\n",
         "### Sanov の定理\n",
-        "$p(x)$, $q(x)$を確率分布とし、$X_1,X_2…$ が $p(x)$ に従う独立同分布な確率変数列であるとする。このとき \"$X_1,…,X_n$ が $q(x)$ に従うように見える確率\" は\n",
+        "$p$, $q$を確率分布とし、$X_1,X_2…$ が $p$ に従う独立同分布な確率変数列であるとする。このとき \"$X_1,…,X_n$ が $q$ に従うように見える確率\" は\n",
         "$$\n",
         "\\exp(-nD(q||p) + o(n))\n",
         "$$\n",
         "となる。つまり、KL 情報量 $D(q||p)$ は $p$ に従う乱数列が $q$ に従うように見える確率の対数が減衰する速さである。\n",
         "### 証明\n",
-        "一般の場合の証明は大変 (というか僕も知らない) なので $p(x)$, $q(x)$ ともに有限台の離散確率分布とする。  \n",
+        "一般の場合の証明は大変 (というか僕も知らない) なので $p$, $q$ ともに有限台の離散確率分布とする。  \n",
         "すなわち、有限集合 $\\{1,…,r\\}$ 上の非負値関数で\n",
         "$$\n",
         "\\begin{align}\n",
@@ -147,6 +170,27 @@
       ],
       "metadata": {
         "id": "9_hd8FYCG851"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "izlYuxtYPOVy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<span id=\"id_01\">\n",
+        "</span>"
+      ],
+      "metadata": {
+        "id": "5u4PDD71PO5A"
       }
     }
   ]
