Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPOeifCw6TO1+4Q1P34Cfku",
+      "authorship_tag": "ABX9TyPQ0MIEHSWB2cJCGY708MZh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,24 +173,18 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "izlYuxtYPOVy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "<span id=\"id_01\">\n",
+        "KL 情報量 $D(q||p)$ は、一般の確率測度 $p$, $q$ に対しラドン＝ニコディム微分を用いて\n",
+        "$$\n",
+        "D(q||p) = ∫\\left(\\ln \\frac{\\mathrm{d}q}{\\mathrm{d}p}\\right)\\mathrm{d}q\n",
+        "$$\n",
+        "と定義できる。これはシャノンエントロピーが\n",
         "</span>"
       ],
       "metadata": {
-        "id": "5u4PDD71PO5A"
+        "id": "95HzQUVqP3Ey"
       }
     }
   ]
