Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN7GnEVWO9nLwb2TQJiv+sr",
+      "authorship_tag": "ABX9TyMK7sd3GZ2lnlzl2Ev/hmiq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,8 +166,28 @@
         "しかし $q_i>0$ かつ $p_i=0$ なる $i$ があると $D(q||p) = ∞$ となり、上の評価は破綻する。  \n",
         "これは、$i$ の目が絶対出ないサイコロを $i$ の目が出るサイコロでたまたまシミュレートすることはできても、$i$ の目が出るサイコロを $i$ の目が出ないサイコロでシミュレートすることはできないことに対応する...のだと思う。\n",
         "# KL 情報量の諸性質\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9_hd8FYCG851"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This is a example of footnote[<sup>1</sup>](#fn1). Another footnote[<sup>2</sup>](#fn2).\n",
         "\n",
-        "<span id=\"id_01\">\n",
+        "<span id=\"fn1\"> footnote 1</span>\n",
+        "<span id=\"fn2\"> footnote 2</span>"
+      ],
+      "metadata": {
+        "id": "5edaaZqhTIH6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<span href=\"id_01\">\n",
         "KL 情報量 $D(q||p)$ は、一般の確率測度 $p$, $q$ に対しラドン＝ニコディム微分を用いて\n",
         "$$\n",
         "D(q||p) = ∫\\left(\\ln \\frac{\\mathrm{d}q}{\\mathrm{d}p}\\right)\\mathrm{d}q\n",
@@ -176,7 +196,7 @@
         "</span>"
       ],
       "metadata": {
-        "id": "9_hd8FYCG851"
+        "id": "8w4wasufSUTx"
       }
     }
   ]
