Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMK7sd3GZ2lnlzl2Ev/hmiq",
+      "authorship_tag": "ABX9TyMJjNK1UTC/aW/cEosBLliA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "# KL 情報量\n",
         "確率分布 $p$ の確率分布 $q$ に対する KL 情報量 $D(q||p)$ を\n",
         "$$\n",
-        "D(q||p) = ∫q(x)\\ln{\\frac{q(x)}{p(x)}}\\mathrm{d}x\n",
+        "D(q||p) := ∫q(x)\\ln{\\frac{q(x)}{p(x)}}\\mathrm{d}x\n",
         "$$\n",
         "で定義する。\n",
         "$$\n",
@@ -90,7 +90,7 @@
         "S(q) &:= -∫q(x)\\ln q(x)\\mathrm{d}x \n",
         "\\end{align}\n",
         "$$\n",
-        "である。$G(q||p)$ を $p$ の $q$ に対する交差エントロピー、もしくは汎化誤差と呼び、$S(q)$ をシャノンエントロピーと呼ぶ[<sup>1</sup>](#id_01)。  \n",
+        "である。$G(q||p)$ を $p$ の $q$ に対する交差エントロピー、もしくは汎化誤差と呼び、$S(q)$ をシャノンエントロピー$^{[注1]}$と呼ぶ。  \n",
         "\n",
         "シャノンエントロピー $S(q)$ は \" $q$ に従って発生する記号列を符号化した際の平均符号長の下限\" 、交差エントロピー $G(q||p)$ は \" $q$ に従って発生する記号列を $p$ に従うと考えて記号化した時の平均符号長\" と解釈される。  \n",
         "よって KL 情報量 $D(q||p)$ は \"実際には $q$ に従って発生する記号列を $p$ に従うとして符号化した際の平均符号長のロス\" と解釈できる (ただし $p$, $q$ が離散的な場合に限る)。  \n",
@@ -99,7 +99,7 @@
         "D(q||p) = -∫q(x)[\\{-\\ln q(x)\\} - \\{-\\ln p(x)\\}]\\mathrm{d}x\n",
         "$$\n",
         "と書き、$p$ を事前分布、$q$ を事後分布と見なせば、$D(q||p)$ は \"事前分布 $p$ を 事後分布 $q$ に更新することで、$X$ の値を知って受け取る情報量が平均的にどれだけ減ったか\" を表すとも考えられる。  \n",
-        "これらの解釈の他に、より\n",
+        "これらの解釈でも $D(q||p)$ が $q$ と $p$ の違いを測るものであることはなんとなく了解されると思うが、 $q$ を $p$ で近似するという立場からより直接的な意味付けを以下に与える。\n",
         "# Sanov の定理による KL 情報量の意味付け\n",
         "### Sanov の定理\n",
         "$p$, $q$を確率分布とし、$X_1,X_2…$ が $p$ に従う独立同分布な確率変数列であるとする。このとき \"$X_1,…,X_n$ が $q$ に従うように見える確率\" は\n",
@@ -175,25 +175,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is a example of footnote[<sup>1</sup>](#fn1). Another footnote[<sup>2</sup>](#fn2).\n",
-        "\n",
-        "<span id=\"fn1\"> footnote 1</span>\n",
-        "<span id=\"fn2\"> footnote 2</span>"
-      ],
-      "metadata": {
-        "id": "5edaaZqhTIH6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<span href=\"id_01\">\n",
-        "KL 情報量 $D(q||p)$ は、一般の確率測度 $p$, $q$ に対しラドン＝ニコディム微分を用いて\n",
+        "# 注釈\n",
+        "### 注1:\n",
+        "KL 情報量 $D(q||p)$ は離散・連続にかかわらず一般の確率測度 $p$, $q$ に対し、ラドン＝ニコディム微分を用いて\n",
         "$$\n",
         "D(q||p) = ∫\\left(\\ln \\frac{\\mathrm{d}q}{\\mathrm{d}p}\\right)\\mathrm{d}q\n",
         "$$\n",
         "と定義できる。これはシャノンエントロピーが\n",
-        "</span>"
+        "$$\n",
+        "\\begin{align}\n",
+        "S_{\\mathrm{discrete}}(q) &:= -\\sum_x q(x)\\ln q(x)\\\\\n",
+        "S_{\\mathrm{continuous}}(q) &:= -∫q(x)\\ln q(x)\\mathrm{d}x \n",
+        "\\end{align}\n",
+        "$$\n",
+        "と離散・連続の場合で別々に定義されたのとは対照的である。  \n",
+        "また、$q$ が $\\{1,…,r\\}$ にしか値を持たないなら、\n",
+        "$$\n",
+        "S_{\\mathrm{discrete}}(q) = \\ln r - D(q||p_{\\mathrm{uniform}})\n",
+        "$$\n",
+        "と書ける。ここに、$p_{\\mathrm{uniform}}$ は $\\{1,…,r\\}$ 上の一様分布である。  \n",
+        "連続の場合も同様にシャノンエントロピーを一様分布との KL 情報量で表すことができる (ただし、$\\mathbf{Z}$ や $\\mathbf{R}$ 上の一様分布は存在しないため、この説明はいささかずるい)。  \n",
+        "ゆえに KL 情報量はシャノンエントロピーよりも基本的な量であると考えられる。"
       ],
       "metadata": {
         "id": "8w4wasufSUTx"
