Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJjNK1UTC/aW/cEosBLliA",
+      "authorship_tag": "ABX9TyPISaknCZ2v+fwPEaJ7IKD9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
         "S(q) &:= -∫q(x)\\ln q(x)\\mathrm{d}x \n",
         "\\end{align}\n",
         "$$\n",
-        "である。$G(q||p)$ を $p$ の $q$ に対する交差エントロピー、もしくは汎化誤差と呼び、$S(q)$ をシャノンエントロピー$^{[注1]}$と呼ぶ。  \n",
+        "である。$G(q||p)$ を $p$ の $q$ に対する交差エントロピー、もしくは汎化誤差と呼び、$S(q)$ をシャノンエントロピー$^{[\\mathrm{注}1]}$と呼ぶ。  \n",
         "\n",
         "シャノンエントロピー $S(q)$ は \" $q$ に従って発生する記号列を符号化した際の平均符号長の下限\" 、交差エントロピー $G(q||p)$ は \" $q$ に従って発生する記号列を $p$ に従うと考えて記号化した時の平均符号長\" と解釈される。  \n",
         "よって KL 情報量 $D(q||p)$ は \"実際には $q$ に従って発生する記号列を $p$ に従うとして符号化した際の平均符号長のロス\" と解釈できる (ただし $p$, $q$ が離散的な場合に限る)。  \n",
