--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPISaknCZ2v+fwPEaJ7IKD9",
+      "authorship_tag": "ABX9TyOwM1jgcRd05oGNeNoz2pCh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "$$\n",
         "である。$G(q||p)$ を $p$ の $q$ に対する交差エントロピー、もしくは汎化誤差と呼び、$S(q)$ をシャノンエントロピー$^{[\\mathrm{注}1]}$と呼ぶ。  \n",
         "\n",
-        "シャノンエントロピー $S(q)$ は \" $q$ に従って発生する記号列を符号化した際の平均符号長の下限\" 、交差エントロピー $G(q||p)$ は \" $q$ に従って発生する記号列を $p$ に従うと考えて記号化した時の平均符号長\" と解釈される。  \n",
+        "シャノンエントロピー $S(q)$ は \" $q$ に従って発生する記号列を (適切に) 符号化した際の平均符号長\" 、交差エントロピー $G(q||p)$ は \" $q$ に従って発生する記号列を $p$ に従うと考えて記号化した時の平均符号長\" と解釈される。  \n",
         "よって KL 情報量 $D(q||p)$ は \"実際には $q$ に従って発生する記号列を $p$ に従うとして符号化した際の平均符号長のロス\" と解釈できる (ただし $p$, $q$ が離散的な場合に限る)。  \n",
         "また、$-\\ln p(x)$ が \" $p$ に従う確率変数 $X$ について、$X = x$ と知らされたときに受け取る情報量\" であったことを思い出そう。改めて\n",
         "$$\n",
@@ -166,6 +166,32 @@
         "しかし $q_i>0$ かつ $p_i=0$ なる $i$ があると $D(q||p) = ∞$ となり、上の評価は破綻する。  \n",
         "これは、$i$ の目が絶対出ないサイコロを $i$ の目が出るサイコロでたまたまシミュレートすることはできても、$i$ の目が出るサイコロを $i$ の目が出ないサイコロでシミュレートすることはできないことに対応する...のだと思う。\n",
         "# KL 情報量の諸性質\n",
+        "KL 情報量の重要な性質として非負値性と非退化性を示す。\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "  &(非負値性)\\quad D(q||p) ≥ 0\\\\\n",
+        "  &(非退化性)\\quad D(q||p)= 0 ⇔ p = q\n",
+        "\\end{align}\n",
+        "$$\n",
+        "### 証明\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "  D(q||p) &= ∫q(x)\\ln{\\frac{q(x)}{p(x)}}\\mathrm{d}x\\\\\n",
+        "          &= ∫q(x)\\left(-\\ln{\\frac{p(x)}{q(x)}}\\right)\\mathrm{d}x\\\\\n",
+        "          &≥ -\\ln\\left(∫q(x){\\frac{p(x)}{q(x)}}\\mathrm{d}x\\right)\\\\\n",
+        "          &= -\\ln\\left(∫p(x)\\mathrm{d}x\\right)\\\\\n",
+        "          &= -\\ln 1\\\\\n",
+        "          &= 0\n",
+        "\\end{align}\n",
+        "$$\n",
+        "ここで、3 行目の変形には「 $t \\mapsto - \\ln t$ が下に凸であること」と、Jensen の不等式を用いた。  \n",
+        "また、$t \\mapsto - \\ln t$ は狭義凸であるので、等号成立条件は\n",
+        "$$\n",
+        "\\frac{p(x)}{q(x)} ≡ \\mathrm{const}.\n",
+        "$$\n",
+        "となるが、$∫p(x)\\mathrm{d}x = ∫q(x)\\mathrm{d}x = 1$ からこれは $p = q$ と同値である (証明終)。 \n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
