Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOwM1jgcRd05oGNeNoz2pCh",
+      "authorship_tag": "ABX9TyPxvUa4VyQJ6uZ7WfgeSDKq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
         "これらの解釈でも $D(q||p)$ が $q$ と $p$ の違いを測るものであることはなんとなく了解されると思うが、 $q$ を $p$ で近似するという立場からより直接的な意味付けを以下に与える。\n",
         "# Sanov の定理による KL 情報量の意味付け\n",
         "### Sanov の定理\n",
-        "$p$, $q$を確率分布とし、$X_1,X_2…$ が $p$ に従う独立同分布な確率変数列であるとする。このとき \"$X_1,…,X_n$ が $q$ に従うように見える確率\" は\n",
+        "$p$, $q$を確率分布とし、$X_1,X_2,…$ が $p$ に従う独立同分布な確率変数列であるとする。このとき \"$X_1,…,X_n$ が $q$ に従うように見える確率\" は\n",
         "$$\n",
         "\\exp(-nD(q||p) + o(n))\n",
         "$$\n",
@@ -189,9 +189,10 @@
         "$$\n",
         "\\frac{p(x)}{q(x)} ≡ \\mathrm{const}.\n",
         "$$\n",
-        "となるが、$∫p(x)\\mathrm{d}x = ∫q(x)\\mathrm{d}x = 1$ からこれは $p = q$ と同値である (証明終)。 \n",
-        "\n",
-        "\n",
+        "となるが、$∫p(x)\\mathrm{d}x = ∫q(x)\\mathrm{d}x = 1$ からこれは $p = q$ と同値である (証明終)。   \n",
+        "以上の結果より、KL 情報量 $D(q||p)$ は確率分布 $p$, $q$ 間の距離のようなものである。  \n",
+        "ただし、対称性 ($D(q||p) = D(p||q)$) や三角不等式 ($D(p||q) \\leq D(p||r) + D(r||q)$) は一般には成り立たない。  \n",
+        "適切な定式化の元で三平方の定理が成立するため、どちらかといえば距離の二乗に相当する量である$^{[\\mathrm{注}2]}$。\n",
         "\n"
       ],
       "metadata": {
@@ -221,7 +222,13 @@
         "$$\n",
         "と書ける。ここに、$p_{\\mathrm{uniform}}$ は $\\{1,…,r\\}$ 上の一様分布である。  \n",
         "連続の場合も同様にシャノンエントロピーを一様分布との KL 情報量で表すことができる (ただし、$\\mathbf{Z}$ や $\\mathbf{R}$ 上の一様分布は存在しないため、この説明はいささかずるい)。  \n",
-        "ゆえに KL 情報量はシャノンエントロピーよりも基本的な量であると考えられる。"
+        "ゆえに KL 情報量はシャノンエントロピーよりも基本的な量であると考えられる。\n",
+        "### 注2:\n",
+        "確率分布族をなめらかな図形 (多様体) とみなし、その上の幾何学を考える分野を情報幾何という。  \n",
+        "そこでは 1 つの確率分布は図形上の 1 点とみなされ、KL 情報量は 2 点間の距離の二乗に相当する。  \n",
+        "また、同じ点における接ベクトル間の内積がフィッシャー情報行列というもので与えられる。  \n",
+        "内積があれば角度が考えられ、直角三角形を考えることで KL 情報量についての三平方の定理が得られる。  \n",
+        "さらに、フィッシャー情報行列は KL 情報量のヘッシアンに相当する (テイラー展開における 2 次の項になる) こともわかる。"
       ],
       "metadata": {
         "id": "8w4wasufSUTx"
