Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPxvUa4VyQJ6uZ7WfgeSDKq",
+      "authorship_tag": "ABX9TyPBwHqtb4IryPLliZzwWRpH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,7 +169,7 @@
         "KL 情報量の重要な性質として非負値性と非退化性を示す。\n",
         "$$\n",
         "\\begin{align}\n",
-        "  &(非負値性)\\quad D(q||p) ≥ 0\\\\\n",
+        "  &(\\mathrm{非負値性})\\quad D(q||p) ≥ 0\\\\\n",
         "  &(非退化性)\\quad D(q||p)= 0 ⇔ p = q\n",
         "\\end{align}\n",
         "$$\n",
