Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBwHqtb4IryPLliZzwWRpH",
+      "authorship_tag": "ABX9TyNd6AzsAOp403HM0Go9hlCf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,7 @@
         "と書き、$p$ を事前分布、$q$ を事後分布と見なせば、$D(q||p)$ は \"事前分布 $p$ を 事後分布 $q$ に更新することで、$X$ の値を知って受け取る情報量が平均的にどれだけ減ったか\" を表すとも考えられる。  \n",
         "これらの解釈でも $D(q||p)$ が $q$ と $p$ の違いを測るものであることはなんとなく了解されると思うが、 $q$ を $p$ で近似するという立場からより直接的な意味付けを以下に与える。\n",
         "# Sanov の定理による KL 情報量の意味付け\n",
-        "### Sanov の定理\n",
+        "### Sanov の定理$^{[\\mathrm{注}2]}$\n",
         "$p$, $q$を確率分布とし、$X_1,X_2,…$ が $p$ に従う独立同分布な確率変数列であるとする。このとき \"$X_1,…,X_n$ が $q$ に従うように見える確率\" は\n",
         "$$\n",
         "\\exp(-nD(q||p) + o(n))\n",
@@ -170,7 +170,7 @@
         "$$\n",
         "\\begin{align}\n",
         "  &(\\mathrm{非負値性})\\quad D(q||p) ≥ 0\\\\\n",
-        "  &(非退化性)\\quad D(q||p)= 0 ⇔ p = q\n",
+        "  &(\\mathrm{非退化性})\\quad D(q||p)= 0 ⇔ p = q\n",
         "\\end{align}\n",
         "$$\n",
         "### 証明\n",
@@ -192,12 +192,67 @@
         "となるが、$∫p(x)\\mathrm{d}x = ∫q(x)\\mathrm{d}x = 1$ からこれは $p = q$ と同値である (証明終)。   \n",
         "以上の結果より、KL 情報量 $D(q||p)$ は確率分布 $p$, $q$ 間の距離のようなものである。  \n",
         "ただし、対称性 ($D(q||p) = D(p||q)$) や三角不等式 ($D(p||q) \\leq D(p||r) + D(r||q)$) は一般には成り立たない。  \n",
-        "適切な定式化の元で三平方の定理が成立するため、どちらかといえば距離の二乗に相当する量である$^{[\\mathrm{注}2]}$。\n",
-        "\n"
+        "適切な定式化の元で三平方の定理が成立するため、どちらかといえば距離の二乗に相当する量である$^{[\\mathrm{注}3]}$。\n",
+        "# 例\n",
+        "### 1. 正規分布\n",
+        "$$\n",
+        "\\begin{align}  \n",
+        "  q(x) &= \\frac{1}{\\sqrt{2\\pi\\sigma_0^2}}\\exp\\left\\{-\\frac{(x-\\mu_0)^2}{2\\sigma_0^2}\\right\\}\\\\\n",
+        "  p(x) &= \\frac{1}{\\sqrt{2\\pi\\sigma_1^2}}\\exp\\left\\{-\\frac{(x-\\mu_1)^2}{2\\sigma_1^2}\\right\\}\n",
+        "\\end{align}\n",
+        "$$\n",
+        "として、KL 情報量 $D(q||p)$ を求める。\n",
+        "$$\n",
+        "\\begin{align}  \n",
+        "  D(q||p) &= ∫q(x)\\ln{\\frac{q(x)}{p(x)}}\\mathrm{d}x\\\\\n",
+        "          &= ∫q(x)\\ln q(x)\\mathrm{d}x -∫q(x)\\ln p(x)\\mathrm{d}x\\\\\n",
+        "\\end{align}\n",
+        "$$\n",
+        "ここで、\n",
+        "$$\n",
+        "\\begin{align}  \n",
+        "  ∫q(x)\\ln p(x)\\mathrm{d}x &= ∫q(x) \\ln \\frac{1}{\\sqrt{2\\pi\\sigma_1^2}} \\mathrm{d}x - ∫q(x)\\frac{(x-\\mu_1)^2}{2\\sigma_1^2}\\mathrm{d}x\\\\\n",
+        "          &= -\\frac{1}{2}\\ln 2\\pi\\sigma_1^2 - \\frac{1}{2\\sigma_1^2}\\left\\{∫q(x)(x-\\mu_0)^2 \\mathrm{d}x + 2(\\mu_0-\\mu_1)∫q(x)(x-\\mu_0)\\mathrm{d}x + ∫q(x)(\\mu_0-\\mu_1)^2\\mathrm{d}x \\right\\}\\\\\n",
+        "          &= -\\frac{1}{2}\\ln 2\\pi\\sigma_1^2 - \\frac{\\sigma_0^2+(\\mu_0-\\mu_1)^2}{2\\sigma_1^2}\n",
+        "\\end{align}\n",
+        "$$\n",
+        "より、\n",
+        "$$\n",
+        "\\begin{align}  \n",
+        "  D(q||p) &= \\left\\{-\\frac{1}{2}\\ln 2\\pi\\sigma_0^2 - \\frac{\\sigma_0^2+(\\mu_0-\\mu_0)^2}{2\\sigma_0^2}\\right\\}-\\left\\{-\\frac{1}{2}\\ln 2\\pi\\sigma_1^2 - \\frac{\\sigma_0^2+(\\mu_0-\\mu_1)^2}{2\\sigma_1^2}\\right\\}\\\\\n",
+        "          &= \\frac{1}{2} \\left\\{\\ln\\frac{\\sigma_1^2}{\\sigma_0^2} + \\frac{\\sigma_0^2+(\\mu_0-\\mu_1)^2}{\\sigma_1^2} -1 \\right\\}\\\\\n",
+        "\\end{align}\n",
+        "$$\n",
+        "となる。\n",
+        "### 2. ベルヌーイ分布\n",
+        "$$\n",
+        "\\begin{align}  \n",
+        "  q(x=0) &= q\\\\\n",
+        "  q(x=1) &= 1-q\\\\\n",
+        "  p(x=0) &= p\\\\\n",
+        "  p(x=1) &= 1-p\\\\\n",
+        "\\end{align}\n",
+        "$$\n",
+        "とすると、KL 情報量 $D(q||p)$ は\n",
+        "$$ \n",
+        "  D(q||p) = q\\ln \\frac{q}{p} + (1-q)\\ln \\frac{1-q}{1-p}\n",
+        "$$\n",
+        "となる。"
       ],
       "metadata": {
         "id": "9_hd8FYCG851"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "TeZoUwJ6d14k"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -224,7 +279,11 @@
         "連続の場合も同様にシャノンエントロピーを一様分布との KL 情報量で表すことができる (ただし、$\\mathbf{Z}$ や $\\mathbf{R}$ 上の一様分布は存在しないため、この説明はいささかずるい)。  \n",
         "ゆえに KL 情報量はシャノンエントロピーよりも基本的な量であると考えられる。\n",
         "### 注2:\n",
-        "確率分布族をなめらかな図形 (多様体) とみなし、その上の幾何学を考える分野を情報幾何という。  \n",
+        "Sanov の定理は大偏差原理と呼ばれるものの一種である。  \n",
+        "大偏差原理とは以下のような\n",
+        "\n",
+        "### 注3:\n",
+        "確率分布族をなめらかな図形 (統計多様体) とみなし、その上の幾何学を考える分野を情報幾何という。  \n",
         "そこでは 1 つの確率分布は図形上の 1 点とみなされ、KL 情報量は 2 点間の距離の二乗に相当する。  \n",
         "また、同じ点における接ベクトル間の内積がフィッシャー情報行列というもので与えられる。  \n",
         "内積があれば角度が考えられ、直角三角形を考えることで KL 情報量についての三平方の定理が得られる。  \n",
