Colaboratory を使用して作成しました

--- a/AIC.ipynb
+++ b/AIC.ipynb
@@ -6,7 +6,7 @@
       "name": "AIC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNd6AzsAOp403HM0Go9hlCf",
+      "authorship_tag": "ABX9TyN9tMcSjjnEbb32OXnlwwWy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -246,12 +246,16 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 表が出る確率 p のコインで表が出る確率 q のコインをシミュレートして、Sanov の定理を確認する\n",
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "TeZoUwJ6d14k"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
