Colaboratory を使用して作成しました

--- a/QueueingTheory.ipynb
+++ b/QueueingTheory.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "QueueingTheory.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMT9dO6VWiryaOtlq9S/eHg",
+      "authorship_tag": "ABX9TyMdYBlElyRJVpRmL2vZjoDb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,9 +59,9 @@
         "時間間隔 $\\Delta t$ 当たり平均 $\\lambda\\Delta t$ 人の顧客がランダムに到着する (特に単位時間 $\\Delta t = 1$ 当たり平均 $\\lambda$ 人の顧客が到着する) とき、単位時間当たりの顧客到着数が従う分布。  \n",
         "このとき時間間隔 $\\Delta t$ 当たりの顧客到着数はパラメータ $\\lambda\\Delta t$ のポアソン分布に従う。\n",
         "### パラメータ $\\lambda$ のポアソン過程\n",
-        "時間間隔 $\\Delta t$ 当たり平均 $\\lambda\\Delta t$ 人の顧客がランダムに到着する (特に単位時間 $\\Delta t = 1$ 当たり平均 $\\lambda$ 人の顧客が到着する) とする。  \n",
-        "時刻 $t$ における総顧客到着数を $X_t$ と書くとき、確率過程 $(X_t)_t$ をパラメータ $\\lambda$ のポアソン過程と呼ぶ。  \n",
-        "このとき時刻 $t$ から時刻 $t+\\Delta t$ までに到着する顧客数 $X_{t+\\Delta t} - X_t$ はパラメータ $\\lambda\\Delta t$ のポアソン分布に従う。\n",
+        "時間間隔 $\\Delta t$ 当たり平均 $\\lambda\\Delta t$ 人の顧客がランダムに到着するとする。  \n",
+        "時刻 $t$ における総顧客到着数を $N(t)$ と書くとき、確率過程 $(N(t))_t$ をパラメータ $\\lambda$ のポアソン過程と呼ぶ。  \n",
+        "このとき時刻 $t$ から時刻 $t+\\Delta t$ までに到着する顧客数 $N(t+\\Delta t) - N(t)$ はパラメータ $\\lambda\\Delta t$ のポアソン分布に従う。\n",
         "### パラメータ $\\mu$ の指数分布\n",
         "パラメータ $\\mu$ のポアソン過程について、顧客到着時間隔の従う分布。  \n",
         "逆に各顧客到着時間隔が独立かつパラメータ $\\mu$ の指数分布に従うなら、総顧客到着数はパラメータ $\\mu$ のポアソン過程となる。   \n",
@@ -114,11 +114,28 @@
         "このとき、\n",
         "$$\n",
         "\\begin{align}\n",
-        "\\int_0^T L(t)\\mathrm{d}t &= \\sum_{n = 1}^{N(T)} \\int_0^T I_n(t)\\mathrm{d}t\\\\\n",
-        "                          &= \n",
+        "\\frac{1}{T}\\int_0^T L(t)\\mathrm{d}t &= \\frac{1}{T}\\sum_{n = 1}^{N(T)} \\int_0^T I_n(t)\\mathrm{d}t\\\\\n",
+        "                          &= \\frac{N(T)}{T}\\frac{1}{N(T)}\\sum_{n = 1}^{N(T)}W_n - \\frac{1}{T}\\sum_{n: A_n \\leq T < D_n}(D_n - T)\n",
         "\\end{align}\n",
         "$$\n",
-        "\n",
+        "ここで、系が \"安定している\" ことから、\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "^{\\exists} L &< \\infty\\\\\n",
+        "^{\\exists} λ &< \\infty\\\\\n",
+        "^{\\exists} W &< \\infty\\\\\n",
+        "\\end{align}\n",
+        "$$\n",
+        "であり、系内顧客数と顧客系内滞在時間にはそれぞれ上界 $L_{\\infty}$ と $W_{\\infty}$ が存在する。  \n",
+        "このとき、\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "\\sum_{n: A_n \\leq T < D_n}(D_n - T) &\\leq \\sum_{n: A_n \\leq T < D_n}W_n\\\\\n",
+        "                                    &\\leq L_{\\infty}W_{\\infty}\n",
+        "\\end{align}\n",
+        "$$\n",
+        "となる。  \n",
+        "よって $T\\rightarrow\\infty$ としてリトルの公式を得る (証明終)。  \n",
         "\n",
         "## 待ち行列とサーバに系を分解する\n",
         "系を待ち行列とサーバに分解し、  \n",
